# FluxDown

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-website.yml  release.yml  triage.yml
.omp/: config.yml
.omp/rules/: no-lerp-from-transparent.md
android/app/: build.gradle.kts
assets/i18n/: en.json  zh.json
docker/: docker-compose.yml  server.Dockerfile
fluxDown/: package-lock.json  package.json  tsconfig.json  wxt.config.ts
fluxDown/entrypoints/: background.ts  fetch-interceptor.ts  resource-detector.content.ts
fluxDown/utils/: i18n.ts  native-messaging.ts  resource-store.ts  resource-types.ts  settings.ts
installer/windows/: setup.iss
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: CMakeLists.txt  my_application.cc  popup_window_host.cc  (+1 more)
scripts/: build_arch_pkg.sh  email_template.html  release_tag.py  send_notify.py  test_popup_present_scale.sh
test/: custom_category_migration_test.dart  device_identity_test.dart  kv_store_test.dart  nickname_pool_test.dart  popup_payload_test.dart  sync_catalog_test.dart  task_referrer_test.dart  toast_card_renderer_test.dart  widget_test.dart
userscript/: README.md  fluxdown.user.js
web/: index.html  manifest.json
website/: .gitignore  Dockerfile  README.md  astro.config.mjs  deploy.sh  package-lock.json  package.json
windows/: CMakeLists.txt
(+272 files in other folders)
